Fixed canvas being too big :/
display block'd

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
-
 body {
     touch-action: none;
     margin: 0;
+}
+
+canvas {
+    display: block;
 }
